Фикс стилей pages

--- a/src/entities/our-products/ui/styles.module.scss
+++ b/src/entities/our-products/ui/styles.module.scss
@@ -57,7 +57,7 @@
   }
 
   .products__pagination {
-    @apply flex justify-center items-center mt-[20px];
+    @apply flex justify-center items-center mt-16;
 
     .prev__button {
       @apply mr-5;
