--- a/src/pages/shop/styles.module.scss
+++ b/src/pages/shop/styles.module.scss
@@ -1,7 +1,7 @@
 .container {
-  @apply pt-[25px];
+  @apply pt-[5rem];
 }
 
 .with__scroll {
-  @apply pt-[243px] max-[866px]:pt-[25px];
+  @apply pt-[297px] max-[866px]:pt-[5rem];
 }
