--- a/src/shared/ui/buttons/back-to-button/styles.module.scss
+++ b/src/shared/ui/buttons/back-to-button/styles.module.scss
@@ -1,17 +1,31 @@
 .container {
-  @apply w-[200px] flex justify-between items-center cursor-pointer p-3 uppercase bg-darkAccents select-none rounded-xl transition-all opacity-80;
+  @apply h-[52px] flex justify-between items-center cursor-pointer py-3.5 px-6 uppercase  select-none rounded-lg transition-all opacity-80 border border-gray;
 
   .image {
-    @apply rotate-180;
+    @apply rotate-180 w-[30px] h-[30px];
+
+    path {
+      @apply fill-gray stroke-gray transition-colors;
+    }
   }
   .text {
-    @apply text-white font-medium text-lg leading-[110%];
+    @apply text-gray font-medium text-base ml-3 transition-colors;
   }
 
   &:hover {
-    @apply bg-accents;
+    @apply bg-darkAccents;
+
+    .image {
+      path {
+        @apply fill-white stroke-white;
+      }
+    }
+
+    .text {
+      @apply text-white;
+    }
   }
   &:active {
-    @apply bg-darkAccents duration-75;
+    @apply bg-accents duration-75;
   }
 }
