В back-to-button фикс стилей

--- a/src/shared/ui/buttons/back-to-button/styles.module.scss
+++ b/src/shared/ui/buttons/back-to-button/styles.module.scss
@@ -13,7 +13,7 @@
   }
 
   &:hover {
-    @apply bg-darkAccents;
+    @apply bg-darkAccents border-darkAccents;
 
     .image {
       path {
@@ -26,6 +26,6 @@
     }
   }
   &:active {
-    @apply bg-accents duration-75;
+    @apply bg-accents border-accents duration-75;
   }
 }
