--- a/src/pages/cart/ui/styles.module.scss
+++ b/src/pages/cart/ui/styles.module.scss
@@ -1,2 +1,19 @@
 .container {
+  @apply pt-[5rem];
+
+  .header {
+    @apply relative mb-16 flex items-center justify-center max-[745px]:flex-col;
+
+    .title {
+      @apply text-center text-black font-semibold text-[2.5rem] max-[745px]:mb-8;
+    }
+
+    .to__shop {
+      @apply absolute top-0 left-0 max-[745px]:relative;
+    }
+  }
+}
+
+.with__scroll {
+  @apply pt-[297px] max-[866px]:pt-[5rem];
 }
