--- a/src/entities/favorites/favorites-block/ui/styles.module.scss
+++ b/src/entities/favorites/favorites-block/ui/styles.module.scss
@@ -1,17 +1,5 @@
 .container {
-  @apply pt-[5rem] text-center;
-
-  .header {
-    @apply relative mb-16 flex items-center justify-center max-[745px]:flex-col;
-
-    .title {
-      @apply text-center text-black font-semibold text-[2.5rem] max-[745px]:mb-8;
-    }
-
-    .to__shop {
-      @apply absolute top-0 left-0 max-[745px]:relative;
-    }
-  }
+  @apply text-center;
 
   .list {
     @apply grid grid-cols-4 auto-rows-auto gap-y-10 gap-x-6 max-[1192px]:grid-cols-3 max-[911px]:grid-cols-2 max-[911px]:gap-x-3 max-[649px]:grid-cols-1 max-[649px]:w-[312px] max-[649px]:inline-block;
@@ -19,8 +7,4 @@
       @apply max-[649px]:mb-10 max-[439px]:max-w-[290px];
     }
   }
-}
-
-.with__scroll {
-  @apply pt-[297px] max-[866px]:pt-[5rem];
 }
