cart-empty.scss фикс

--- a/src/entities/cart/cart-empty/ui/styles.module.scss
+++ b/src/entities/cart/cart-empty/ui/styles.module.scss
@@ -1,5 +1,5 @@
 .container {
-  @apply text-center max-w-[300px];
+  @apply text-center max-w-[300px] #{!important};
   .text {
     @apply uppercase text-black font-semibold text-[1.5rem] mb-[80px];
   }
