cart-item фикс стилей

--- a/src/shared/ui/cart-item/styles.module.scss
+++ b/src/shared/ui/cart-item/styles.module.scss
@@ -13,7 +13,7 @@
     }
 
     .title {
-      @apply pr-3 max-[628px]:pr-0 max-[628px]:w-[150px] max-[584px]:w-[300px] max-[426px]:w-[150px];
+      @apply pr-3 w-[300px] max-[667px]:pr-0 max-[667px]:w-[150px] max-[584px]:w-[300px] max-[426px]:w-[150px];
     }
   }
 
