В to-cart плфиксил стили .count

--- a/src/features/to-cart/ui/styles.module.scss
+++ b/src/features/to-cart/ui/styles.module.scss
@@ -9,7 +9,7 @@
       @apply pl-2 pr-3 text-sm text-black transition duration-1000;
     }
     .count {
-      @apply text-[0.625rem] text-white font-dmSans py-0.5 px-[0.4375rem] bg-darkAccents rounded-3xl transition duration-1000;
+      @apply w-5 h-5 text-[0.625rem] flex justify-center items-center text-white font-dmSans  bg-darkAccents rounded-3xl transition duration-1000;
     }
 
     &:active {
