--- a/src/entities/cart/cart-block/ui/styles.module.scss
+++ b/src/entities/cart/cart-block/ui/styles.module.scss
@@ -36,7 +36,7 @@
       @apply uppercase flex;
 
       span {
-        @apply w-[105px] text-start;
+        @apply w-[105px] text-end;
       }
     }
   }
