В favorites-button сделал isActive

--- a/src/shared/ui/card/styles.module.scss
+++ b/src/shared/ui/card/styles.module.scss
@@ -15,7 +15,7 @@
     @apply flex absolute z-[1] m-5 select-none;
   }
   .favorite {
-    @apply absolute top-0 right-0 m-5 select-none opacity-0 transition-all delay-75;
+    @apply absolute top-0 right-0 m-5 select-none transition-all delay-75;
   }
 
   .image {
