--- a/src/features/product-card/ui/styles.module.scss
+++ b/src/features/product-card/ui/styles.module.scss
@@ -1,10 +1,10 @@
 .container {
   text-align: -webkit-center;
   .list {
-    @apply grid grid-rows-1 grid-cols-4 gap-x-6 max-[1138px]:grid-cols-2 max-[1138px]:gap-y-10 max-[1138px]:w-[60%] max-[860px]:grid-cols-1 max-[860px]:w-[312px] max-[669px]:gap-y-5;
+    @apply grid grid-rows-1 grid-cols-4 gap-x-6 max-[1138px]:grid-cols-2 max-[1138px]:gap-y-10 max-[1138px]:place-items-center max-[860px]:grid-cols-1 max-[669px]:gap-y-5;
 
     li {
-      @apply max-[439px]:max-w-[290px];
+      @apply max-[1138px]:w-[300px] max-[439px]:max-w-[290px];
     }
   }
 }
