--- a/src/shared/ui/buttons/back-to-button/styles.module.scss
+++ b/src/shared/ui/buttons/back-to-button/styles.module.scss
@@ -9,7 +9,7 @@
     }
   }
   .text {
-    @apply text-gray font-medium text-base ml-3 transition-colors;
+    @apply w-full text-gray font-medium text-base ml-3 transition-colors;
   }
 
   &:hover {
