В normalize.scss фикс стилей

--- a/src/app/styles/normalize.scss
+++ b/src/app/styles/normalize.scss
@@ -40,5 +40,5 @@ code {
   width: 100vw;
 }
 ._container {
-  @apply max-w-[84.25rem] m-auto pl-3.5 pr-6;
+  @apply max-w-[84.25rem] m-auto px-3.5;
 }
