В top-categories фикс адаптива

--- a/src/entities/top-categories/ui/styles.module.scss
+++ b/src/entities/top-categories/ui/styles.module.scss
@@ -5,7 +5,7 @@
     @apply flex flex-wrap justify-between max-[1331px]:justify-center max-[415px]:-mt-10 max-[356px]:-mt-10 max-[320px]:-mt-0;
 
     li {
-      @apply w-[26.5rem] h-[26.5rem] max-[1315px]:mb-4;
+      @apply w-[26.5rem] h-[26.5rem] max-[1331px]:mb-4 max-[458px]:w-[350px] max-[458px]:h-[350px] max-[385px]:w-[300px] max-[384px]:h-[300px];
     }
 
     li:not(:last-child) {
