В our-products фикс стилей

--- a/src/entities/our-products/ui/styles.module.scss
+++ b/src/entities/our-products/ui/styles.module.scss
@@ -54,7 +54,7 @@
     text-align: -webkit-center;
 
     li {
-      @apply max-[911px]:w-[300px] max-[649px]:mb-10 max-[342px]:w-[290px] max-[342px]:h-[290px];
+      @apply max-[911px]:w-[300px] max-[649px]:mb-10 max-[342px]:w-[290px];
     }
   }
 
